fixed spacing of navbar and added animation for hover

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: transparent;
+  background-color: $main-color;
 
   font-weight: bolder;
 
@@ -13,12 +14,18 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+
 }
 
 .avatar {
-  height:45px ;
+  height:36px ;
 }
 
 .custom-navbar .navbar-nav .nav-link {
   color: $white;
+  margin-left: 5px;
+  margin-right: 15px;
+  &:hover{
+    color: $secondary-color;
+  }
 }
